@@ -3,7 +3,7 @@
 # disable malloc check in glibc otw. we get corruption blarg on exit() with NDEBUG builds
 export MALLOC_CHECK_=0
 
-declare -i TIMEOUT=100
+declare -i TIMEOUT=180
 declare -i MEMOUT=1000
 
 export GNUTIME="/usr/bin/time --verbose -o" # time command
@@ -12,24 +12,29 @@ export TIMELIMIT="timelimit -p -s 1 -t $TIMEOUT -T 20"
 export TIMEFORMAT=$'\nreal\t%3R\nuser\t%3U\nsys\t%3S' # time format
 export TESTSPATH='./experiments' # path to lp/br/opt
 export DMCSPATH='../../../../../build/src' # path to dmcsd/dmcsc relative to test instances
+export DMCS_PARALLEL_PATH='../../../../../../dmcs-parallel/build/src' # path to parallel dmcsd/dmcsc relative to test instances
 export LOGPATH='.' # path to output logfiles relative to test instances
 
-DORUN=yes # run with `run'
+export EMAIL=dao@kr.tuwien.ac.at
+
+DORUN=no # run with `run'
 DOTIMELIMIT=yes # run with `timelimit'
 VERBOSE=yes # output stuff
-LOGDAEMONS=yes # log daemon output
+LOGDAEMONS=no # log daemon output
+ULIMIT=yes # use ulimit
 
 export TOPOLOGIES="diamond tree ring zig-zag"
+#export TOPOLOGIES="tree ring zig-zag"
 export INSTANCES=a..e
 
-declare -a sizes=(7 7 100 7 100 7 100)
+#                 D        T               R               Z
+declare -a sizes=(10 28 34 10 28 34 50 100 10 28 34 50 100 10 28 34 50 100)
+declare -a start=(0 3 8 13 18)
+declare -a length=(3 5 5 5)
 
-declare -a start=(0 1 3 5)
-declare -a length=(1 2 2 2)
-
-declare -a sigs=(10 40 40 100)
-declare -a bridges=(5 20 20 50)
-declare -a rels=(5 20 20 50)
+declare -a sigs=(10 40)
+declare -a bridges=(5 20)
+declare -a rels=(5 20)
 
 declare -a packages=(10 100 0)
 
@@ -38,9 +43,13 @@ declare -a packages=(10 100 0)
 export DMCSD="$DMCSPATH/dmcsd"
 export DMCSC="$DMCSPATH/dmcsc"
 
+export DMCSD_PARALLEL="$DMCS_PARALLEL_PATH/dmcsd"
+export DMCSC_PARALLEL="$DMCS_PARALLEL_PATH/dmcsc"
+
+
 declare -i MINPORT=5000
 
-declare -i i=0
+declare -i i=1
 declare -i j=0
 declare -i k=0
 declare -i p=0
@@ -58,13 +67,17 @@ function runTest()
 {
     MODE=$1
 
-    if [ $MODE = streaming ] ; then
+    if [ $MODE = streaming -o $MODE = parallel ] ; then
 	MODE=$MODE-k$2
     fi
 
     echo $TESTNAME-$MODE
-    echo "Sleeping for 70 secs..."
-    sleep 70
+
+    if [ `netstat -anlt | grep TIME_WAIT | wc -l` -gt 1 ]; then # kludge
+	echo "Sleeping for 70 secs..."
+	sleep 70 
+    fi
+
 
     STATSLOG=./$TESTNAME-$MODE-status.log
     date > $STATSLOG
@@ -86,8 +99,12 @@ function runTest()
 	fi
 
 	DMCSDOPTS="--context=$N --port=$((MINPORT+N)) --kb=$INPUTN.lp --br=$INPUTN.br --topology=$INPUT.opt"
-		      
-	DMCSDRUN="$DMCSD $DMCSDOPTS"
+
+	if [ $1 = parallel ] ; then
+	    DMCSDRUN="$DMCSD_PARALLEL $DMCSDOPTS"
+	else
+	    DMCSDRUN="$DMCSD $DMCSDOPTS"
+	fi
 	
 	if [ x$DORUN = xyes ] ; then
 	    DMCSDRUN="$RUN $RUNLOGN $DMCSDRUN"
@@ -104,8 +121,12 @@ function runTest()
 	if [ x$VERBOSE = xyes ] ; then
 	    set -x
 	fi
-	
-	$DMCSDRUN > $LOGN 2>&1 &
+
+	if [ x$ULIMIT = xyes ] ; then
+	    (ulimit -v $((MEMOUT*1024)) ; $DMCSDRUN ) > $LOGN 2>&1 &
+	else
+	    $DMCSDRUN > $LOGN 2>&1 &
+	fi
 	
 	set +x
 	
@@ -113,21 +134,26 @@ function runTest()
 	
     done
     
-    echo "Sleep for 40 secs for the Server to start..."
-    sleep 40
+    declare -i SLEEPTIME=$((CTX * 4 / 10))
+    echo "Sleep for $SLEEPTIME secs for the daemons to start..."
+    sleep $SLEEPTIME
     
     LOGTIME=$LOGPATH/$TESTNAME-$MODE-time.log
     LOGCOUT=$LOGPATH/$TESTNAME-$MODE.log
     LOGCERR=$LOGPATH/$TESTNAME-$MODE-err.log
     LOGRUN=$LOGPATH/$TESTNAME-$MODE-run.log
 
-    if [ $1 = streaming ] ; then 
+    if [ $1 = streaming -o $1 = parallel ] ; then 
 	DMCSCOPTS="--hostname=localhost --port=$((MINPORT+1)) --system-size=$CTX --s=1 --k=$2"
     else
 	DMCSCOPTS="--hostname=localhost --port=$((MINPORT+1)) --system-size=$CTX --s=0"
     fi
-		
-    DMCSCRUN="$DMCSC $DMCSCOPTS "
+
+    if [ $1 = parallel ] ; then
+	DMCSCRUN="$DMCSC_PARALLEL $DMCSCOPTS "
+    else
+	DMCSCRUN="$DMCSC $DMCSCOPTS "
+    fi
     
     if [ x$DORUN = xyes ] ; then
 	DMCSCRUN="$RUN $LOGRUN $DMCSCRUN"
@@ -136,12 +162,18 @@ function runTest()
     if [ x$DOTIMELIMIT = xyes ] ; then
 	DMCSCRUN="$TIMELIMIT $DMCSCRUN"
     fi
-    
+
+    DMCSCRUN="$GNUTIME $LOGTIME $DMCSCRUN"
+
     if [ x$VERBOSE = xyes ] ; then
 	set -x
     fi
-    
-    $GNUTIME $LOGTIME $DMCSCRUN > $LOGCOUT 2> $LOGCERR
+
+    if [ x$ULIMIT = xyes ] ; then
+    	( ulimit -v $((MEMOUT*1024)) ; $DMCSCRUN ) > $LOGCOUT 2> $LOGCERR
+    else
+	$DMCSCRUN > $LOGCOUT 2> $LOGCERR
+    fi
     
     DMCSCRET=$?
     
@@ -153,13 +185,12 @@ function runTest()
     echo >> $STATSLOG
     
     if [ $DMCSCRET = 0 ]; then
-	echo PASS: $TESTNAME-$MODE >> $STATSLOG
-	echo "cat $TESTNAME-$MODE.log | head -1" >> $RESULT
-	echo "New test $TESTNAME-$MODE finished: **$RESULT**" | mail -s "New test FINISHED" dao@kr.tuwien.ac.at
+	echo "PASS: $TESTNAME-$MODE" >> $STATSLOG
+	(echo "New test $TESTNAME-$MODE finished" ; echo ; cat $TESTNAME-$MODE.log ; echo ; cat $TESTNAME-$MODE-time.log) | mail -s "New test on lion FINISHED" $EMAIL
     else
 	egrep -H "status" $LOGPATH/$TESTNAME-$MODE-run*.log >> $STATSLOG
-	echo FAILED: $TESTNAME-$MODE >> $STATSLOG
-	echo "New test $TESTNAME-$MODE " | mail -s "New test FAILED" dao@kr.tuwien.ac.at
+	echo "FAILED: $TESTNAME-$MODE" >> $STATSLOG
+	(echo "New test $TESTNAME-$MODE failed" ; echo ; cat $TESTNAME-$MODE.log ; echo ; cat $TESTNAME-$MODE-time.log) | mail -s "New test on lion FAILED" $EMAIL
     fi
     
     echo >> $STATSLOG
@@ -184,11 +215,11 @@ cd $TESTSPATH
 for TOPO in $TOPOLOGIES ; do 
     
     cd $TOPO
-    #export TOPO=$CTOPO
 
     declare -i start_now=${start[$i]}
 
     declare -i end_now=$start_now
+    #let "end_now += 1"
     let "end_now += ${length[$i]}"
 
     # go for system size ########################
@@ -198,17 +229,11 @@ for TOPO in $TOPOLOGIES ; do
 
 	# go for parameters setting #############
 	for (( k = 0; k < 2; ++k )); do
+	#for (( k = 0; k < 1; ++k )); do
 
-	    declare -i l=${k}
-	    let "l *= 2"
-
-	    if [ $CTX = 100 ] ; then
-		let "l += 1"
-	    fi
-
-	    declare -i SIG=${sigs[$l]}
-	    declare -i BRS=${bridges[$l]}
-	    declare -i RLS=${rels[$l]}
+	    declare -i SIG=${sigs[$k]}
+	    declare -i BRS=${bridges[$k]}
+	    declare -i RLS=${rels[$k]}
 
 	    cd $CTX-$SIG-$BRS-$RLS
 	    
@@ -223,6 +248,8 @@ for TOPO in $TOPOLOGIES ; do
 
 		for (( p=0; p < 3; ++p )); do
 		    runTest streaming ${packages[$p]}
+
+		    runTest parallel ${packages[$p]}
 		done
 
 		cd ..
